[package]
name = "server"
version = "0.1.0"
authors = ["Frank Meza <frankmezapdx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.8.3"
actix-codec = "0.1.2"
actix-cors = "0.1.0"
actix-files = "0.1.7"
actix-http = "0.2.11"
actix-web  = "1.0.9"
actix-web-actors = "1.0.3"
awc = "0.2.8"
bytes = "0.4"
env_logger = "0.7.1"
futures = "0.3.1"
json = "0.12.0"
postgres = "0.15"
run_script = "0.3.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.102"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
ws = "0.9.1"