[package]
name = "server"
version = "0.1.0"
authors = ["Frank Meza <frankmezapdx@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-codec = "0.2.0"
actix-cors = "0.2.0"
actix-files = "0.2.1"
actix-http = "1.0.1"
actix-rt = "1.0.0"
actix-web = "2.0"
actix-web-actors = "2.0.0"
awc = "1.0.1"
bytes = "0.5.4"
env_logger = "0.7.1"
futures = "0.3.4"
futures-util = "0.3.11"
json = "0.12.1"
proc-macro2 = "1.0.9"
postgres = "0.17.1"
run_script = "0.6.2"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0.104"
serde_json = "1.0"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
ws = "0.9.1"
tokio = { version = "0.2.13", features = ["full"] }
tokio-postgres = "0.5.2"